--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-fetcher-fullstack-v2",
+  "name": "veris-feed-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
-  "author": "Beth Johnson",
+  "author": "Andrea Miralles",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -18,11 +18,9 @@
   },
   "dependencies": {
     "express": "^4.15.0",
-    "angular": "^1.6.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "fs": "0.0.1-security",
     "jquery": "^3.1.1",
-    "mongoose": "^4.8.6",
-    "mysql": "^2.13.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
