--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "node server/index.js"
+    "server-dev": "node index.js"
   },
   "author": "Andrea Miralles",
   "license": "ISC",
